# pyrolib

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  setup.cfg
.github/workflows/: python-package.yml
docs/: Rebuild  conf copy.py  conf.py  index.rst  modules.rst  pyrolib.rst  redirect.rst  requirements.txt
docs/api/: pyrolib.blaze.rst  pyrolib.data_processing.rst  pyrolib.fuelmap.rst  pyrolib.rst
docs/howto/: create_fuel.md  generate_fuelmap.md  use_cli.md
examples/: EXSEG1.nam  fuel_classes.py  scenario.py  simplecase.py
examples/fuel_database/: change_fuel_properties_in_db.py  user_db.yml  user_fuel_database.py
examples/fuel_map/: EXSEG1.nam  Init_file.des  Init_file.nc  simplecase.py
src/pyrolib/: __init__.py  blaze.py  cli_fuelmap.py  cli_post.py  firefluxpost.py  fuels.py
src/pyrolib/blaze/: __init__.py  subgrid_burning_area.py
src/pyrolib/data/: Default_MNH_namelist.yml  FireFluxI.yml
src/pyrolib/data/fuel_db/: DefaultSA.yml  FireFluxI.yml
src/pyrolib/data/scenario/: DefaultSA.yml
src/pyrolib/data_processing/: __init__.py
src/pyrolib/fuelmap/: __init__.py  fuel_database.py  fuelmap.py  fuels.py  patch.py  scenario.py  utility.py
tests/func/: test_fct_blaze.py  test_fct_fuels.py
tests/unit/: test_blaze.py  test_fuels.py
