[metadata]
name = pyrolib
version = attr: pyrolib.__version__
author = Aurélien Costes
author_email = aurelien.costes31@gmail.com
description = Python tools for MesoNH-Blaze model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pypi.org/project/pyrolib/
project_urls =
    Homepage = https://github.com/Aurel31/pyrolib/
    Documentation = https://pyrolib.readthedocs.io/en/latest/
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
keywords =
    Blaze fire model
    Méso-NH

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.8
install_requires =
    numpy < 2.0
    netCDF4 < 2.0
    scipy < 2.0
    bresenham
    PyYAML
    f90nml
    click
zip_safe = False
include_package_data = True

[options.entry_points]
console_scripts =
    pyrolib-fm = pyrolib.cli_fuelmap:main_cli
    pyrolib-post = pyrolib.cli_post:main_cli

[options.packages.find]
where = src

[options.package_data]
pyrolib =
    data/*.y*ml

[options.extras_require]
tests=
    pytest
docs =
    myst-parser
    sphinx_rtd_theme